examples/vote/vote-template.yaml
# First create a Config Map from seed_data.json file
# kubectl create configmap seeds --from-file=seed_data.json
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    run: vote
spec:
  type: NodePort
  selector:
    run: vote
  ports:
  - name: http
    protocol: TCP
    nodePort: 31500
    port: 5000
    targetPort: 5000

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
  generation: 1
  labels:
    run: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      run: vote
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: vote
    spec:
      containers:
      - image: kalise/vote-app:latest
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: seeds
            mountPath: /app/seeds
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /vote.html
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5      
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /vote.html
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
      dnsPolicy: ClusterFirst
      volumes:
      - name: seeds
        configMap:
          name: seeds
