examples/vote/vote-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vote.cloud.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: 5000
